# RAG

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EVENT_LOGGING_IMPLEMENTATION.md  LANGCHAIN_MIGRATION.md  PROJECT_STRUCTURE.md  RDB_PIPELINE_README.md  README.md  README_DOCKER.md  README_EN.md  README_WEBUI.md  TESTING_REPORT.md  WEBUI_CONFIG.md  analyze_current_processing.py  analyze_embedding_issues.py  analyze_milvus_collections.py  analyze_milvus_data.py  check_api_processing.py  check_collection_schema.py  check_current_status.py  check_novels_episodes.py  check_rdb_episode_count.py  check_rdb_novels.py  check_vectordb_content.py  check_vectordb_detailed.py  chunking_criteria_analysis.py  clear_mock_events.py  compare_api_cli_logic.py  complete_rdb_vectordb_verification.py  create_conversation_tables.py  debug_app.py  debug_config.py  debug_content_mismatch.py  debug_middleware.py  debug_milvus_pipeline.py  debug_routes.py  debug_stream.py  debug_stream2.py  (+117 more)
.claude/agents/: api-security-auditor.md  database-migration-expert.md  episode-processor.md  llm-orchestrator.md  performance-profiler.md  rag-optimizer.md  test-automation-engineer.md  vector-db-manager.md
.streamlit/: config.toml  secrets.toml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
configs/dev/: config.yaml
configs/prod/: config.yaml
data/: sync_states.json
database/schemas/: auth.sql  conversations.sql  metrics.sql  user_data.sql
docs/: architecture.md
examples/: embedding_usage_example.py  episode_rag_usage.py  langchain_rag_example.py  llm_usage_example.py  multi_model_usage.py  rdb_pipeline_usage_example.py
scripts/: generate_ssl_cert.sh  init_databases.py
src/: __init__.py
src/access_control/: __init__.py  access_control_manager.py  audit_logger.py  exceptions.py  group_manager.py  metadata_filter.py  milvus_rbac.py  permission_inheritance.py
src/api/: __init__.py  middleware.py  schemas.py
src/auth/: __init__.py  dependencies.py  exceptions.py  jwt_manager.py  middleware.py  models.py  rbac.py  schemas.py  sqlite_auth.py  user_manager.py
src/cli/: __init__.py  main.py  utils.py
src/conversation/: __init__.py  storage.py
src/core/: __init__.py  app.py  config.py  database.py  exceptions.py  logger_mixin.py  logging.py  mixins.py  user_database.py
src/database/: __init__.py  base.py  drivers.py  health.py  introspection.py  pool.py  retry.py
src/embedding/: __init__.py  base.py  factory.py  factory_langchain.py  langchain_embeddings.py  manager.py  types.py  utils.py
src/embeddings/: __init__.py
src/episode/: __init__.py  manager.py  models.py  multi_model_manager.py  processor.py  search_engine.py  vector_store.py
src/extraction/: __init__.py  base.py  exceptions.py  factory.py  generic.py
src/file_system/: __init__.py  batch_config.py  batch_processor.py  change_detector.py  error_handler.py  exceptions.py  extractor.py  file_processor.py  metadata_extractor.py  metadata_types.py  parsers.py  processing_queue.py  progress_tracker.py  scanner.py
src/llm/: __init__.py  base.py  langchain_providers.py  manager.py
src/metrics/: __init__.py  collectors.py  database.py  integration.py
src/milvus/: __init__.py  client.py  collection.py  index.py  rbac.py  schema.py  search.py
src/models/: __init__.py  base.py  conversation.py  document.py  query_log.py  sync_state.py
src/pipeline/: __init__.py  monitoring.py  (+9 more)
templates/: test_streaming.html
tests/: __init__.py  conftest.py  conftest_full.py
webui/: __init__.py  api_client.py  app.py  auth.py  config.py  config_db.py  settings.yaml  utils.py
(+84 files in other folders)
